# PDFms

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pch.h  vcpkg-clang-mingw.cmake  vcpkg.json
src/: OutThread.hpp  SearchResult.hpp  SearchThread.hpp  SearchedFiles.hpp  ui.hpp  util.hpp
